# OCPQ

./: .gitignore  Cargo.toml  README.md  ReadMe.md  docker-compose.yml
.github/workflows/: tauri-build-app.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/ocpq_cli/: Cargo.toml
backend/ocpq_cli/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs
backend/shared/src/Translation/: SQLTranslation.rs
backend/shared/src/binding_box/: expand_step.rs  mod.rs  step_order.rs  structs.rs  test.rs
backend/shared/src/cel/: mod.rs
backend/shared/src/constraints/: check_constraints.rs  mod.rs
backend/shared/src/constraints_2/: mod.rs
backend/shared/src/discovery/: evaluation.rs  graph_discovery.rs  mod.rs
backend/shared/src/discovery/advanced/: mod.rs
backend/shared/src/hpc_backend/: mod.rs
backend/shared/src/ocel_graph/: mod.rs
backend/shared/src/ocel_qualifiers/: qualifiers.rs
backend/shared/src/preprocessing/: linked_ocel.rs  preprocess.rs  tests.rs
backend/shared/src/table_export/: mod.rs
backend/shared/src/translation/: mod.rs
backend/src/: main.rs
backend/src/constraint_checker/: check.rs
backend/src/constraints/: check_constraints.rs  structs.rs
backend/src/constraints_2/: mod.rs
backend/src/discovery/: evaluation.rs  mod.rs
backend/src/load_ocel/: load_ocel.rs  mod.rs
backend/src/ocel_qualifiers/: qualifiers.rs
backend/src/preprocessing/: preprocess.rs  tests.rs
backend/web-server/: Cargo.toml
backend/web-server/src/: main.rs
backend/web-server/src/load_ocel/: mod.rs
frontend/: .eslintignore  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  BackendProviderContext.ts  ErrorPage.tsx  globals.css  index.css  main.tsx  router.tsx
frontend/src/components/: AlertHelper.tsx  CELEditor.tsx  ElementInfoSheet.tsx  FilterLabelIcon.tsx  JsonEditor.tsx  MenuLink.tsx  OcelElementInfo.tsx  Spinner.tsx  TimeDurationInput.tsx
frontend/src/components/binding-table/: PaginatedBindingTable.tsx  columns.tsx
frontend/src/components/hpc/: HPCConnectionConfigForm.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  checkbox.tsx  combobox.tsx  command.tsx  intermediate-checkbox.tsx  multi-select.tsx  select.tsx  sheet.tsx  table.tsx
frontend/src/lib/: download-url.ts  editor-loader.ts
frontend/src/routes/: OcelElementViewer.tsx  OcelGraphViewer.tsx
frontend/src/routes/ocel-info/: OcelInfoViewer.tsx  OcelTypeViewer.tsx
frontend/src/routes/visual-editor/: TotalViolationInfo.tsx  ViolationDetailsSheet.tsx  VisualEditor.tsx
frontend/src/routes/visual-editor/constraint-container/: ConstraintContainer.tsx
frontend/src/routes/visual-editor/evaluation/: construct-tree.ts  construct-tree.tsx  evaluate-constraints.tsx
frontend/src/routes/visual-editor/helper/: ConnectionLine.tsx  ConstraintInfoContext.tsx  EventLink.tsx  EventTypeLink.tsx  EventTypeNode.tsx  FlowContext.tsx  GateLink.tsx  LayoutFlow.tsx  QuantifiedObjectEdge.tsx  ViolationsContext.tsx  VisualEditorContext.tsx  colors.ts  const.ts  constructNodes.ts  infinity-input.ts  types.ts  violation-styles.tsx  visual-editor-utils.ts
frontend/src/routes/visual-editor/helper/box/: FilterChooser.tsx  FilterConstraintChooser.tsx  FilterOrConstraintEditor.tsx  LabelFunctionChooser.tsx  NewVariablesChooser.tsx  variable-names.ts  variable-names.tsx
frontend/src/routes/visual-editor/helper/evaluation/: evaluate-constraints.tsx
frontend/src/routes/visual-editor/helper/node/: EventTypeNode.tsx  GateNode.tsx  MiscNodeConstraints.tsx  SituationIndicator.tsx  ViolationIndicator.tsx
frontend/src/routes/visual-editor/old_helper/: EventTypeLink.tsx  OldVisualEditor.tsx  visual-editor-context.tsx
frontend/src/routes/visual-editor/outer-visual-editor/: AutoDiscovery.tsx  OuterVisualEditor.tsx
frontend/src/types/: hpc-backend.ts  misc.ts  ocel.ts
tauri/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
tauri/frontend-tauri/: .eslintrc.cjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
tauri/frontend-tauri/src/: main.tsx
tauri/src/: main.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: migrated.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: main.rs
