[package]
name = "ocedeclare-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.192" , features = ["derive"]}
serde_json = "1.0.108"
serde_with = "3.8.1"
ts-rs = "8.1"
process_mining = "0.2.5"
rayon = "1.8.0"
itertools = "0.11.0"
chrono = "0.4.33"
uuid = "1.7.0"
plotly = { version = "0.8.4", features = ["kaleido"] }