[package]
name = "ocedeclare-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.192" , features = ["derive"]}
serde_json = "1.0.108"
serde_with = "3.8.1"
ts-rs = { version = "8.1", features = ["serde-compat","chrono-impl"] }
process_mining = "0.3.14"
rayon = "1.8.0"
itertools = "0.11.0"
chrono = "0.4.33"
uuid = "1.7.0"
plotly = { version = "0.9.0", features = ["kaleido"] }
rand = "0.8.5"
cel-interpreter = "0.8.1"
once_cell = "1.19.0"