[package]
name = "ocpq-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.192" , features = ["derive", "rc"]}
serde_json = "1.0.108"
serde_with = "3.11.0"
ts-rs = { version = "8.1", features = ["serde-compat","chrono-impl"] }
process_mining = { git = "https://github.com/aarkue/rust4pm", features=["ocel-sqlite"]}
rayon = "1.8.0"
itertools = "0.11.0"
chrono = "0.4.33"
uuid = "1.7.0"
plotly = { version = "0.9.0", features = ["kaleido"] }
rand = "0.8.5"
cel-interpreter = {version = "0.9.0", features = ["chrono"]}
once_cell = "1.19.0"
dirs-next = "2.0.0"
csv = "1.3.0"
rust_xlsxwriter = {version = "0.80.0", features = ["chrono"]}
ordered-float = {version = "4.4.0", features = ["default","serde"]}
anyhow = "1.0.95"
rust_slurm = { path = "/home/aarkue/doc/projects/rust-slurm/crates/rust_slurm/", features = ["ssh"]}
tokio = { version = "1.43", features = ["full"] }
rayon-cancel = "1.0.0"
