[package]
name = "ocedeclare-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.192" , features = ["derive"]}
serde_json = "1.0.108"
process_mining = {path = "../../../rust-bridge-process-mining/process_mining/"}
ocedeclare-shared = {path = "../shared"}
tower-http = { version = "0.4.3", features = ["cors"] }
rayon = "1.8.0"
itertools = "0.11.0"
chrono = "0.4.33"
uuid = "1.7.0"
cel-interpreter = "0.8.1"