[package]
name = "ocedeclare-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.192" , features = ["derive"]}
serde_json = "1.0.108"
process_mining = { git = "https://github.com/aarkue/rust4pm", features=["ocel-sqlite"]}
ocedeclare-shared = {path = "../shared"}
tower-http = { version = "0.6.1", features = ["cors"] }
rayon = "1.8.0"
itertools = "0.11.0"
chrono = "0.4.33"
uuid = "1.7.0"
cel-interpreter = {version = "0.9.0", features = ["chrono"]}