[package]
name = "ocpq-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.7", features = ["default","macros"]}
tokio = { version = "1.43", features = ["full"] }
serde = {version = "1.0.192" , features = ["derive"]}
serde_json = "1.0.108"
process_mining = { git = "https://github.com/aarkue/rust4pm", features=["ocel-sqlite"]}
ocpq-shared = {path = "../shared"}
rayon = "1.8.0"
itertools = "0.11.0"
chrono = "0.4.33"
uuid = "1.7.0"
tower-http = { version = "0.6.1", features = ["cors"] }
cel-interpreter = {version = "0.9.0", features = ["chrono"]}