[package]
name = "ocpq-tauri"
version = "0.0.3"
description = "OCPQ"
authors = ["aarkue"]
license = ""
repository = ""
default-run = "ocpq-tauri"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "devtools"] }
process_mining = { git = "https://github.com/aarkue/rust4pm", features= ["ocel-sqlite"] }
ocpq-shared = {path = "../../backend/shared"}
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
